Fixed save to Spotify feature